tests/ui/traits/object/issue-44454-1.stderr
error: lifetime may not live long enough
  --> $DIR/issue-44454-1.rs:14:5
   |
LL | fn bar<'a>(_arg: &'a i32) {
   |        -- lifetime `'a` defined here
LL |     foo::<dyn Animal<&'a i32>, &'a i32>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

